@@ -52,6 +52,9 @@
 
 	Display number of color pairs in use to :version/:vifm menu.
 
+	Don't show a message at the end of 'incsearch' if the cursor was moved not
+	by the search.  Patch by filterfalse.
+
 	Fixed line number column not including padding to the left of it.
 
 	Fixed local options not being loaded on Ctrl-W x.
